tests/sksl/errors/OverflowIntLiteral.glsl
### Compilation failed:

error: 4: integer is out of range for type 'int': -2147483649
error: 6: integer is out of range for type 'int': 2147483648
error: 9: integer is out of range for type 'ushort4': -1
error: 9: integer is out of range for type 'ushort4': 65536
error: 14: integer is out of range for type 'short4': -32769
error: 14: integer is out of range for type 'short4': 32768
error: 20: unknown identifier 'intMinMinusOne'
error: 22: unknown identifier 'intMaxPlusOne'
error: 25: unknown identifier 'intMinMinusOne'
error: 27: unknown identifier 'intMaxPlusOne'
10 errors
